test/classes/initializers/phase1/hasLoopBad.good
hasLoopBad.chpl:7: error: illegal initialization of field "highestNum" in loop context (not permitted in Phase 1)
hasLoopBad.chpl:10: error: illegal initialization of field "highestNum" in loop context (not permitted in Phase 1)
